# feed-protocol

./: .gitignore  AUTHORING.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: cross-model-test.md  reliability-and-answer-control.md
eval/: .env.example  README.md  providers.py  refine.py  requirements.txt  run.py  score.py  suite.py
examples/: build_pump_report.py  pump-condition-report.html  pump-condition-report.md
feed/: __init__.py  authoring.py  cli.py  constants.py  document.py  parser.py  render.py  tagger.py  validate.py  verify.py
spec/: feed-spec-v0.2.md
templates/: blank.feed.md
tests/: test_feed.py
